--- a/Widget/Widget.entitlements
+++ b/Widget/Widget.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.suzypark.Flextimer</string>
+		<string>group.suzypark.Flextimer</string>
 	</array>
 </dict>
 </plist>
