--- a/Flextimer.xcodeproj/xcshareddata/xcschemes/Flextimer.xcscheme
+++ b/Flextimer.xcodeproj/xcshareddata/xcschemes/Flextimer.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "BF6DCD302483B43B00B6B05F"
+               BuildableName = "FlextimerTests.xctest"
+               BlueprintName = "FlextimerTests"
+               ReferencedContainer = "container:Flextimer.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
