--- a/.gitignore
+++ b/.gitignore
@@ -111,3 +111,5 @@ iOSInjectionProject/
 
 # End of https://www.gitignore.io/api/swift,xcode,cocoapods
 Flextimer/Resources/GoogleService-Info.plist
+
+.DS_Store
